# Kashif_Agent

./: .env.example  .gitignore  README.md  activate.sh  config.yaml  program.md  pyproject.toml
api/: __init__.py  server.py
cli/: main.py
core/: executor.py  fe_agent.py  narrator.py  profiler.py  reporter.py  trainer.py
core/llm/: __init__.py  anthropic.py  base.py  groq.py  ollama.py
data/: README.md
scripts/: smoke_classification.py  smoke_executor.py  smoke_harder_dataset.py  smoke_integration.py  smoke_llm.py  smoke_profiler.py  smoke_regression.py  smoke_wine_diagnostic.py
tests/: test_api.py  test_cli.py  test_executor.py  test_fe_agent.py  test_llm.py  test_narrator.py  test_profiler.py  test_reporter.py  test_trainer.py
ui/: __init__.py  app.py
