[project]
name = "kashif-core"
version = "0.1.0"
description = "Data science agent: static AutoML pipeline + LLM feature engineering loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.94.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "python-multipart>=0.0.26",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "streamlit>=1.56.0",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
    "xgboost>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
